--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "ajv": "~8.13.0",
+    "autoprefixer": "^10.4.20",
     "circular-dependency-plugin": "~5.2.2",
     "css-loader": "~7.1.1",
+    "daisyui": "^3.9.4",
     "eslint": "~8.57.0",
     "eslint-config-vinta": "github:vintasoftware/eslint-config-vinta#9dd2803f4864a2e9942c636f78b367b4d5a56c67",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -74,10 +76,9 @@
     "postcss-loader": "~8.1.1",
     "prettier": "~3.2.5",
     "react-refresh": "^0.14.2",
-    "sass": "1.77.6",
-    "sass-loader": "~14.2.1",
     "style-loader": "~4.0.0",
     "swc-loader": "^0.2.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5",
     "webpack": "~5.91.0",
     "webpack-bundle-tracker": "~3.1.0",
